--- a/exercises.ipynb
+++ b/exercises.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,12 +36,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "def exercise_1() -> torch.Tensor:\n",
-    "    raise NotImplementedError\n",
+    "    x = torch.tensor(2.0, requires_grad=True, dtype=torch.float32)\n",
+    "    y = x**2 + 3*x +8\n",
+    "    y.backward()\n",
+    "    return x.grad\n",
     "\n",
     "ex1_sol = exercise_1()\n",
     "assert torch.equal(ex1_sol, torch.tensor(7.0))"
@@ -56,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,9 +68,16 @@
     "def exercise_2(x) -> tuple:\n",
     "    # all the output and gradients are tensors\n",
     "\n",
+    "\n",
     "    torch.manual_seed(0) # must set seed=0 before random your weight\n",
     "    \n",
-    "    raise NotImplementedError\n",
+    "    x = x.float()\n",
+    "    w = torch.randn(5, dtype=torch.float32, requires_grad=True)\n",
+    "    b = torch.tensor(5.0)\n",
+    "    output = torch.dot(w, x) + b\n",
+    "    output.backward()\n",
+    "    return(output, w.grad)\n",
+    "\n",
     "    # you must return in this format\n",
     "    # return (output, weight_grads_tensor)\n",
     "\n",
@@ -86,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,8 +106,12 @@
     "     # all the output and gradients are tensors\n",
     "    \n",
     "    torch.manual_seed(0) # must set seed=0 before random your weight\n",
-    "\n",
-    "    raise NotImplementedError\n",
+    "    x = x.float()\n",
+    "    w = torch.randn_like(x, requires_grad=True)  \n",
+    "    b = torch.arange(1.0, len(x) + 1.0)\n",
+    "    output = w * x + b\n",
+    "    output.sum().backward()\n",
+    "    return (output, w.grad)\n",
     "    # you must return in this format\n",
     "    # return (output, weight_grads_tensor)\n",
     "\n",
@@ -116,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,8 +139,15 @@
     "\n",
     "def exercise_4(data, target) -> tuple:\n",
     "    # both gradients are tensors\n",
+    "    torch.manual_seed(0)\n",
+    "    data = data.to(torch.float32)\n",
+    "    w = torch.randn(len(data), dtype=torch.float32, requires_grad=True)\n",
+    "    b = torch.randn(1, dtype=torch.float32, requires_grad=True)\n",
     "\n",
-    "    raise NotImplementedError\n",
+    "    output = torch.dot(w,data) + b\n",
+    "    loss = torch.mean((output-target)**2)\n",
+    "    loss.backward()\n",
+    "    return w.grad, b.grad\n",
     "    # you must return in this format\n",
     "    # return (weight_grads_tensor, bias_grads_tensor)\n",
     "\n",
@@ -173,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -186,26 +207,35 @@
     "\n",
     "    class MyNetwork(nn.Module):\n",
     "        def __init__(self):\n",
-    "            raise NotImplementedError\n",
+    "            super().__init__()\n",
+    "            self.layer1 = torch.nn.Linear(in_features = 5, out_features = 4)\n",
+    "            self.layer2 = torch.nn.Linear(in_features = 4, out_features = 2)\n",
     "\n",
     "        def forward(self, x):\n",
     "            # layer 1\n",
-    "\n",
+    "            x = torch.sigmoid(self.layer1(x))\n",
     "            # layer 2\n",
+    "            x = torch.sigmoid(self.layer2(x))\n",
+    "            return x # replace (or not) x with your tensor variable\n",
     "\n",
-    "            return x[:,0] # replace (or not) x with your tensor variable\n",
+    "    loss_function = torch.nn.BCELoss()\n",
+    "    model = MyNetwork()\n",
+    "    optimizer = torch.optim.SGD(model.parameters(), lr=0.01)\n",
+    "    train_y_onehot = torch.zeros((train_y.size(0), 2))\n",
+    "    train_y_onehot[range(train_y.size(0)), train_y.long()] = 1.0\n",
     "\n",
-    "    loss = __\n",
-    "    model = __\n",
-    "    optimizer = __\n",
     "\n",
     "    # train loop\n",
     "    for i in range(2):\n",
+    "        optimizer.zero_grad()\n",
     "        output = model(train_x)\n",
-    "        \n",
-    "        # your implementation\n",
+    "        loss = loss_function(output, train_y_onehot)\n",
+    "        loss.backward()\n",
+    "        optimizer.step()\n",
+    "    with torch.no_grad():\n",
+    "        prediction = model(val_x)\n",
     "\n",
-    "    raise NotImplementedError\n",
+    "    return prediction\n",
     "\n",
     "ex5_sol = exercise_5(train_x=train_x, train_y=train_y, val_x=val_x)"
    ]
@@ -213,7 +243,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "pytorch",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -227,7 +257,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.2"
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
